Added model_to_form function s part of the FormHelper, enables clever form creation from models for speeding up builds.

--- a/Mojo/todo.txt
+++ b/Mojo/todo.txt
@@ -1,5 +1,7 @@
 Forms:
 - Model-to-form generator
+- Add more Fields to cover: Password and TextArea so they map better to forms
+- Figure out how to pass-through validation (at least required fields from Model to Form types.)
 
 Admin:
 - Setting for sync backend to use
